<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".ui.categories.SelectCategoriesFragment">

	<data>

		<variable
			name="handler"
			type="com.jojo.jojozquizz.tools.ClickHandler" />

		<variable
			name="switchHandler"
			type="com.jojo.jojozquizz.ui.categories.SwitchHandler" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constraintLayout"
		android:layout_height="match_parent"
		android:layout_width="match_parent">

		<ImageButton
			android:id="@+id/categoriesBackButton"
			style="@style/ReturnButton"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:contentDescription="@string/back_arrow"
			android:onClick="@{handler::onButtonClick}"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_arrow_back" />

		<TextView
			android:id="@+id/activity_select_categories_text"
			style="@style/ActivityTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/select_categories"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<com.google.android.material.switchmaterial.SwitchMaterial
			android:id="@+id/switchSelectAll"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp"
			android:checked="true"
			android:onCheckedChanged="@{switchHandler::onCheckChanged}"
			android:text="@string/deselect_all"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.06"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/activity_select_categories_text" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recycler_categories"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintBottom_toTopOf="@+id/guideline11"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/switchSelectAll" />

		<TextView
			android:id="@+id/textView5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/difficulty"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.20"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/recycler_categories" />

		<LinearLayout
			android:id="@+id/linearLayout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView5">

			<com.google.android.material.checkbox.MaterialCheckBox
				android:id="@+id/activity_select_categories_checkbox_facile"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/easy" />

			<com.google.android.material.checkbox.MaterialCheckBox
				android:id="@+id/activity_select_categories_checkbox_moyen"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/medium" />

			<com.google.android.material.checkbox.MaterialCheckBox
				android:id="@+id/activity_select_categories_checkbox_difficile"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/hard" />
		</LinearLayout>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent="0.5" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline11"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_percent="0.75" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>