<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:id="@+id/dialog_progress_title"
		style="@style/ActivityTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/whats_your_name"
		android:textAlignment="textEnd"
		android:textSize="20sp" />

	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="40dp"
		android:layout_marginEnd="40dp"
		android:hint="@string/string_hint_ask_name"
		app:startIconContentDescription="@string/users_icon"
		app:startIconDrawable="@drawable/ic_person">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/dialog_name_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:maxLength="15"
			android:paddingStart="20dp"
			android:paddingEnd="20dp" />
	</com.google.android.material.textfield.TextInputLayout>

</LinearLayout>